--- a/locales/en_US.json
+++ b/locales/en_US.json
@@ -120,7 +120,6 @@
     "good_photo": "  ⭐⭐ Good photo (AI:{confidence:.2f}, Sharpness:{sharpness:.1f}{iqa_text})",
     "average_photo": "  ⭐ Average photo (AI:{confidence:.2f}, Sharpness:{sharpness:.1f}{iqa_text})",
     "poor_quality": "  0⭐ Poor quality: {reason} (AI:{confidence:.2f}{iqa_text})",
-    "no_bird": "  ❌ No bird detected",
     "yolo_inference": "  ⏱️  [2/7] YOLO Inference: {time:.1f}ms",
     "result_parsing": "  ⏱️  [3/7] Result Parsing: {time:.1f}ms",
     "nima_score": "🎨 NIMA Aesthetic Score: {score:.2f} / 10",
@@ -268,10 +267,10 @@
     "step4": "Import to Lightroom or use Bridge for sorting and post-processing",
     "rating_rules_title": "Rating Rules:",
     "rule_3_star": "⭐⭐⭐ = Both sharpness and aesthetics meet threshold (3 stars)",
-    "rule_picked": "🏆 Pick Flag = Top 10% in both aesthetics and sharpness among 3-star photos",
+    "rule_picked": "🏆 Pick Flag = Top 25% in both aesthetics and sharpness among 3-star photos",
     "rule_2_star": "⭐⭐ = Either sharpness or aesthetics meets threshold (2 stars)",
     "rule_1_star": "⭐ = Bird detected but below threshold (1 star)",
-    "rule_0_star": "0 star = Poor technical quality (confidence/distortion/aesthetics/sharpness below threshold)",
+    "rule_0_star": "0 star = Poor technical quality (confidence/aesthetics/sharpness below threshold or both eyes hidden)",
     "rule_rejected": "❌ = No bird detected",
     "ready": "Ready? Select a directory to begin!",
     "tools_list_title": "More free tools by James:",
@@ -306,16 +305,16 @@
     "sort_step1": "Switch to 'Grid View' (G key)",
     "sort_step2": "Click Metadata",
     "sort_step3": "Click customize, add:",
-    "sort_step3_city": "☑ City (Sharpness value - higher is sharper)",
+    "sort_step3_city": "☑ City (Head sharpness value - higher is sharper)",
     "sort_step3_state": "☑ Province-State (Aesthetics - higher is better)",
-    "sort_step3_country": "☑ Country (Distortion - only for under-qualified photos, lower is better)",
+    "sort_step3_country": "(Deprecated)",
     "sort_step4": "Click sort by (e.g., click 'City' to sort by sharpness)",
     "fields_title": "Rating Field Descriptions",
     "field_rating": "Rating: -1 star (rejected) / 0 star (poor quality) / 1 star / 2 stars / 3 stars (excellent)",
-    "field_pick": "Pick: 🏆Picked (top 10% in both aesthetics & sharpness among 3-star) / 🚫Rejected (-1 star)",
-    "field_city": "City: Sharpness value, range 6000-10000, higher is sharper",
+    "field_pick": "Pick: 🏆Picked (top 25% in both aesthetics & sharpness among 3-star) / 🚫Rejected (-1 star)",
+    "field_city": "City: Head sharpness value, range 0-2000+, higher is sharper",
     "field_state": "Province-State: Aesthetic score, range 0-10, higher matches human aesthetics better",
-    "field_country": "Country: Image distortion BRISQUE score, range 0-100, lower is better (⚡Performance optimization: Photos that meet sharpness or aesthetics thresholds skip BRISQUE calculation, this field will be empty)",
+    "field_country": "Country: Deprecated (BRISQUE removed in V3.2)",
     "workflow_title": "Quick Workflow",
     "workflow_step1": "Step 1: Filter 3-star + picked photos → These are the best quality",
     "workflow_step2": "Step 2: Sort by 'City' descending → View sharpest photos",
