--- a/locales/zh_CN.json
+++ b/locales/zh_CN.json
@@ -120,7 +120,6 @@
     "good_photo": "  ⭐⭐ 良好照片 (AI:{confidence:.2f}, 锐度:{sharpness:.1f}{iqa_text})",
     "average_photo": "  ⭐ 普通照片 (AI:{confidence:.2f}, 锐度:{sharpness:.1f}{iqa_text})",
     "poor_quality": "  0⭐ 质量差: {reason} (AI:{confidence:.2f}{iqa_text})",
-    "no_bird": "  ❌ 未检测到鸟",
     "yolo_inference": "  ⏱️  [2/7] YOLO推理: {time:.1f}ms",
     "result_parsing": "  ⏱️  [3/7] 结果解析: {time:.1f}ms",
     "nima_score": "🎨 NIMA 美学评分: {score:.2f} / 10",
@@ -268,10 +267,10 @@
     "step4": "导入Lightroom或用Bridge进行排序与后期处理",
     "rating_rules_title": "评分规则：",
     "rule_3_star": "⭐⭐⭐ = 锐度+美学双达标（3星）",
-    "rule_picked": "🏆 精选旗标 = 3星中美学+锐度双排名Top 10%交集",
+    "rule_picked": "🏆 精选旗标 = 3星中美学+锐度双排名Top 25%交集",
     "rule_2_star": "⭐⭐ = 锐度或美学达标之一（2星）",
     "rule_1_star": "⭐ = 有鸟但未达标（1星）",
-    "rule_0_star": "0星 = 技术质量太差（置信度/失真/美学/锐度不达标）",
+    "rule_0_star": "0星 = 技术质量太差（置信度/美学/锐度不达标或双眼不可见）",
     "rule_rejected": "❌ = 完全没鸟",
     "ready": "准备好了吗？选择目录开始吧！",
     "tools_list_title": "詹姆斯独立开发的更多免费工具：",
@@ -306,16 +305,16 @@
     "sort_step1": "切换到'网格视图'（G键）",
     "sort_step2": "点击元数据",
     "sort_step3": "点击自定义，添加：",
-    "sort_step3_city": "☑ 城市（锐度值 - 数值越高越清晰）",
+    "sort_step3_city": "☑ 城市（头部锐度值 - 数值越高越清晰）",
     "sort_step3_state": "☑ 省/州（摄影美学 - 数值越高越美）",
-    "sort_step3_country": "☑ 国家（画面失真 - 仅不达标照片有此值，越低越好）",
+    "sort_step3_country": "（已停用）",
     "sort_step4": "点击排序依据（例如点击'城市'按锐度排序）",
     "fields_title": "评分字段说明",
     "field_rating": "星级(Rating): -1星(拒绝) / 0星(质量差) / 1星 / 2星 / 3星(优选)",
-    "field_pick": "旗标(Pick): 🏆精选(3星中美学+锐度双Top 10%) / 🚫排除(-1星)",
-    "field_city": "城市(City): 锐度值，范围6000-10000，越高越清晰",
+    "field_pick": "旗标(Pick): 🏆精选(3星中美学+锐度双Top 25%) / 🚫排除(-1星)",
+    "field_city": "城市(City): 头部锐度值，范围0-2000+，越高越清晰",
     "field_state": "省/州(Province-State): 摄影美学，范围0-10，越高越符合人类审美",
-    "field_country": "国家(Country): 画面失真BRISQUE值，范围0-100，越低越好（⚡性能优化：锐度或美学达标的照片会跳过BRISQUE计算，此字段为空）",
+    "field_country": "国家(Country): 已停用（V3.2移除BRISQUE评估）",
     "workflow_title": "快捷工作流程",
     "workflow_step1": "步骤1: 筛选3星+精选照片 → 这是最优质的照片",
     "workflow_step2": "步骤2: 按'城市'降序排序 → 查看最锐利的照片",
