--- a/locales/zh_CN.json
+++ b/locales/zh_CN.json
@@ -19,7 +19,7 @@
     "start": "▶️  开始处理",
     "stop": "⏸️  停止",
     "reset": "🔄 重置目录",
-    "post_adjust": "🎯 二次选鸟",
+    "post_adjust": "🎯 重新评星",
     "advanced": "⚙️  高级设置",
     "preview": "🔍 预览新评分",
     "apply": "✅ 应用新评分",
@@ -52,7 +52,7 @@
     "reset_failed": "目录重置失败，请查看日志",
     "reset_failed_title": "错误",
     "processing_complete": "✅ 处理完成！",
-    "post_adjust_complete": "✅ 二次选鸟完成！评分已更新到EXIF元数据",
+    "post_adjust_complete": "✅ 重新评星完成！评分已更新到EXIF元数据",
     "no_report_csv": "未找到report.csv，请先运行主处理流程",
     "csv_format_error": "CSV文件格式不正确，缺少必需字段",
     "no_data": "没有可应用的数据",
@@ -68,7 +68,9 @@
     "warning": "警告",
     "error": "错误",
     "dir_selected": "已选择目录: {directory}",
-    "report_detected": "检测到历史分析数据，可使用'二次选鸟'功能"
+    "report_detected": "检测到历史分析数据，可使用'重新评星'功能",
+    "history_detected_title": "发现历史记录",
+    "history_detected_msg": "检测到该目录包含 SuperPicky 处理记录。\n\n是否直接进入【重新评星】模式调整评分？\n（选择'否'将停留在主界面，可重新开始处理）"
   },
   "logs": {
     "reset_start": "🔄 开始重置目录",
@@ -180,17 +182,18 @@
     "count_with_percent_nochange": "{count} 张 ({percent:.1f}%)  [无变化]"
   },
   "post_adjustment": {
-    "title": "二次选鸟 - 优化评分标准",
+    "title": "重新评星 - 优化评分标准",
     "description": "📊 基于已有AI分析结果，快速调整评分标准（无需重新运行AI）",
     "threshold_group": "调整评分阈值",
     "threshold_description": "拖动滑块调整阈值，实时预览变化",
     "zero_star_group": "0星阈值（技术质量差）",
     "two_three_star_group": "2/3星阈值",
     "picked_group": "精选旗标设置",
-    "min_confidence": "最低置信度 (0.3-0.7)：",
-    "min_sharpness": "最低锐度 (2000-6000)：",
-    "min_nima": "最低美学 (3.0-5.0)：",
-    "max_brisque": "最高噪点 (20-50)：",
+    "advanced_settings": "▶ 高级：0星底线设置",
+    "advanced_tip": "低于以下值将直接判定为 0 星",
+    "min_confidence": "最低置信度",
+    "min_sharpness": "最低锐度",
+    "min_nima": "最低美学",
     "sharpness_threshold": "鸟锐度阈值 (2/3星):",
     "nima_threshold": "摄影美学阈值 (2/3星):",
     "picked_percentage": "精选旗标百分比:",
@@ -230,7 +233,7 @@
     "picked_percentage_description": "3星照片中，美学+锐度双排名都在此百分比内的设为精选",
     "csv_report_label": "CSV报告",
     "csv_checkbox_label": "保存CSV报告文件 (report.csv) [必需]",
-    "csv_description": "CSV包含所有照片的详细评分数据（二次选鸟功能必需）",
+    "csv_description": "CSV包含所有照片的详细评分数据（重新评星功能必需）",
     "log_level_label": "日志详细程度",
     "log_detailed_label": "详细 - 显示每张照片的评分详情",
     "log_simple_label": "简单 - 只显示处理进度和统计",
