--- a/locales/zh_CN.json
+++ b/locales/zh_CN.json
@@ -5,8 +5,9 @@
     "version": "3.3.0"
   },
   "app": {
-    "title": "慧眼选鸟 by 詹姆斯于震 v3.5.1",
-    "window_title": "慧眼选鸟 by 詹姆斯于震"
+    "title": "慧眼选鸟 by 詹姆斯于震 v3.6.0",
+    "window_title": "慧眼选鸟 by 詹姆斯于震",
+    "brand_name": "慧眼选鸟"
   },
   "menu": {
     "settings": "设置",
@@ -40,7 +41,29 @@
     "app_title": "📷 拍片一时爽，💻 选片照样爽",
     "select_photo_dir": "选择照片目录",
     "rating_params": "优选参数",
-    "browse": "浏览"
+    "browse": "浏览",
+    "subtitle": "AI 选片助手",
+    "photo_directory": "照片目录",
+    "selection_params": "优选参数",
+    "flight_detection": "飞行姿态",
+    "sharpness_short": "锐度",
+    "aesthetics": "美学",
+    "console": "控制台",
+    "ready": "就绪",
+    "complete": "完成",
+    "re_rate": "重新评星",
+    "start_processing": "开始处理",
+    "reset_short": "重置",
+    "dir_placeholder": "选择或粘贴照片目录路径...",
+    "yes": "是",
+    "no": "否",
+    "error": "错误",
+    "processing": "处理中",
+    "resetting": "重置中"
+  },
+  "dialogs": {
+    "file_organization_title": "文件整理",
+    "file_organization_msg": "分析完成后，照片将按星级分类到文件夹:\n\n• 3星 → 3星_优选\n• 2星 → 2星_良好\n• 1星 → 1星_普通\n• 0星/无鸟 → 0星_放弃\n\n如需恢复原始结构，可使用'重置'功能。"
   },
   "messages": {
     "select_dir_first": "请先选择照片目录",
@@ -70,10 +93,20 @@
     "dir_selected": "已选择目录: {directory}",
     "report_detected": "检测到历史分析数据，可使用'重新评星'功能",
     "history_detected_title": "发现历史记录",
-    "history_detected_msg": "检测到该目录包含 SuperPicky 处理记录。\n\n是否直接进入【重新评星】模式调整评分？\n（选择'否'将停留在主界面，可重新开始处理）"
+    "history_detected_msg": "检测到该目录包含 SuperPicky 处理记录。\n\n是否直接进入【重新评星】模式调整评分？\n（选择'否'将停留在主界面，可重新开始处理）",
+    "reset_complete_log": "目录重置完成",
+    "reset_complete_msg": "目录重置完成",
+    "files_restored": "已恢复文件: {count}",
+    "exif_reset_count": "EXIF已重置: {count}",
+    "ready_for_analysis": "可以开始新的分析了",
+    "reset_failed_log": "重置失败"
   },
   "logs": {
     "reset_start": "🔄 开始重置目录",
+    "reset_step1": "步骤1: 将文件恢复到主目录...",
+    "restored_files": "  已恢复 {count} 个文件",
+    "no_files_to_restore": "  没有需要恢复的文件",
+    "reset_step2": "步骤2: 清理并重置EXIF...",
     "reset_dir": "📁 目录: {directory}",
     "reset_complete": "✅ 目录重置完成！",
     "reset_failed": "❌ 目录重置失败",
@@ -183,6 +216,38 @@
   },
   "post_adjustment": {
     "title": "重新评星 - 优化评分标准",
+    "window_title": "重新评星",
+    "header_title": "调整评分",
+    "current": "当前",
+    "preview": "预览",
+    "total_photos": "共 {count} 张照片",
+    "pick_label": "精选",
+    "thresholds": "阈值",
+    "sharpness": "锐度",
+    "aesthetics": "美学",
+    "pick_top_percent": "精选比例",
+    "advanced_0star": "高级: 0星筛选",
+    "min_confidence": "最低置信度",
+    "min_sharpness": "最低锐度",
+    "min_nima": "最低美学",
+    "cancel": "取消",
+    "apply_changes": "应用更改",
+    "confirm_title": "确认更改",
+    "confirm_msg": "更新 {count} 张照片?\n(共 {total} 张有鸟照片)",
+    "no_changes": "当前设置没有变化",
+    "starting": "开始重新评星...",
+    "finding_files": "正在查找文件 {current}/{total}",
+    "writing_exif_progress": "正在写入EXIF {current}/{total}",
+    "no_files_found": "未找到文件",
+    "exif_result": "EXIF: 成功 {success}, 失败 {failed}",
+    "updating_csv": "正在更新CSV...",
+    "reorganizing": "正在重新整理文件...",
+    "moved_files": "移动了 {count} 个文件",
+    "complete": "完成",
+    "result_title": "完成",
+    "result_msg": "EXIF 已更新: {success}\n失败: {failed}",
+    "result_with_moved": "EXIF 已更新: {success}\n失败: {failed}\n文件移动: {moved}",
+    "tip_lightroom": "提示: 在 Lightroom 中使用'从文件读取元数据'来同步。",
     "description": "📊 基于已有AI分析结果，快速调整评分标准（无需重新运行AI）",
     "threshold_group": "调整评分阈值",
     "threshold_description": "拖动滑块调整阈值，实时预览变化",
@@ -191,9 +256,6 @@
     "picked_group": "精选旗标设置",
     "advanced_settings": "▶ 高级：0星底线设置",
     "advanced_tip": "低于以下值将直接判定为 0 星",
-    "min_confidence": "最低置信度",
-    "min_sharpness": "最低锐度",
-    "min_nima": "最低美学",
     "sharpness_threshold": "鸟锐度阈值 (2/3星):",
     "nima_threshold": "摄影美学阈值 (2/3星):",
     "picked_percentage": "精选旗标百分比:",
@@ -212,6 +274,32 @@
     "apply_success_title": "完成",
     "apply_error_title": "错误",
     "apply_error_msg": "应用失败：{error}"
+  },
+  "settings": {
+    "window_title": "设置",
+    "header_title": "设置",
+    "tab_thresholds": "0星阈值",
+    "tab_output": "输出",
+    "thresholds_desc": "最低技术质量阈值。低于这些数值的照片将被评为0星。",
+    "ai_confidence": "AI置信度",
+    "min_sharpness": "最低锐度",
+    "min_aesthetics": "最低美学",
+    "output_desc": "配置输出选项和偏好设置。",
+    "pick_top_percent": "精选比例",
+    "language_section": "语言",
+    "interface_language": "界面语言",
+    "restart_note": "需要重启应用后生效",
+    "reset_defaults": "恢复默认",
+    "cancel": "取消",
+    "save": "保存",
+    "reset_confirm_title": "重置设置",
+    "reset_confirm_msg": "确定要恢复所有设置为默认值吗？",
+    "reset_done_title": "设置已重置",
+    "reset_done_msg": "所有设置已恢复为默认值。",
+    "save_success_title": "设置已保存",
+    "save_success_msg": "设置保存成功。\n语言更改需要重启应用后生效。",
+    "save_error_title": "错误",
+    "save_error_msg": "保存设置失败。"
   },
   "advanced_settings": {
     "title": "高级设置",
@@ -262,19 +350,19 @@
     "normalization": "锐度归一化方法，影响大小鸟之间的公平性"
   },
   "help": {
-    "welcome_title": "欢迎使用 SuperPicky V3.5.1 - 慧眼选鸟 | 比你更聪明的选片工具",
+    "welcome_title": "欢迎使用 SuperPicky V3.6.0 - 慧眼选鸟 | 比你更聪明的选片工具",
     "usage_steps_title": "使用步骤：",
     "step1": "点击'浏览'选择照片目录（支持RAW/JPG）",
     "step2": "调整三星与精选参数（可选，推荐默认值）",
     "step3": "点击'开始处理'，等待AI分析完成",
-    "step4": "导入Lightroom或用Bridge进行排序与后期处理",
+    "step4": "导入 Lightroom 进行后期处理与管理",
     "rating_rules_title": "评分规则：",
     "rule_3_star": "⭐⭐⭐ = 锐度+美学双达标（3星）",
-    "rule_picked": "🏆 精选旗标 = 3星中美学+锐度双排名Top 25%交集",
+    "rule_picked": "  └─ 🏆 精选旗标 = 3星中美学+锐度双排名Top 25%交集",
     "rule_2_star": "⭐⭐ = 锐度或美学达标之一（2星）",
     "rule_1_star": "⭐ = 有鸟但未达标（1星）",
-    "rule_0_star": "0星 = 技术质量太差（置信度/美学/锐度不达标或双眼不可见）",
-    "rule_rejected": "❌ = 完全没鸟 → 0星_放弃/",
+    "rule_0_star": "0星/❌无鸟 = 技术质量差或没有鸟 → 0星_放弃/",
+    "rule_flying": "🟢 绿色标签 = 飞行姿态鸟类（自动标记）",
     "folder_info": "📂 目录分配: 3星_优选/ | 2星_良好/ | 1星_普通/ | 0星_放弃/",
     "ready": "准备好了吗？选择目录开始吧！",
     "tools_list_title": "詹姆斯独立开发的更多免费工具：",
