fix: Rename 飞行姿态 to 飞鸟 in zh_CN locale

--- a/locales/zh_CN.json
+++ b/locales/zh_CN.json
@@ -45,7 +45,7 @@
     "subtitle": "AI 选片助手",
     "photo_directory": "照片目录",
     "selection_params": "优选参数",
-    "flight_detection": "飞行姿态",
+    "flight_detection": "飞鸟",
     "sharpness_short": "锐度",
     "aesthetics": "美学",
     "console": "控制台",
