fix: Simplify burst_info description for clarity
Now reads: 连拍照片会分组保存在 burst_xxx/ 子目录

--- a/locales/zh_CN.json
+++ b/locales/zh_CN.json
@@ -369,7 +369,7 @@
     "rule_focus": "🔴 红色标签 = 精焦（焦点在头部）（锐度×1.1 加成）",
     "rule_exposure": "⚠️ 过曝/欠曝 = 自动降一星",
     "folder_info": "📂 目录分配: 3星_优选/ | 2星_良好/ | 1星_普通/ | 0星_放弃/",
-    "burst_info": "📸 连拍检测: 一组连拍全部移入 burst_xxx/ 子目录，最佳保留在星级文件夹",
+    "burst_info": "📸 连拍照片会分组保存在 burst_xxx/ 子目录",
     "ready": "准备好了吗？选择目录开始吧！",
     "tools_list_title": "詹姆斯独立开发的更多免费工具：",
     "tool_1": "慧眼观鸟：AI 智能懂鸟与鸟种统计 IOS 手机专用",
