feat: Update English locale with corresponding changes
- rule_picked uses dynamic {percentage} placeholder
- rule_flying now shows 'Flying pose bird (Sharpness ×1.2 bonus)'
- Added rule_focus, rule_exposure, burst_info to match Chinese

--- a/locales/en_US.json
+++ b/locales/en_US.json
@@ -331,8 +331,11 @@
     "step4": "Import to Lightroom for post-processing and management",
     "rating_rules_title": "Rating Rules:",
     "rule_3_star": "⭐⭐⭐ = Both sharpness and aesthetics meet threshold (3 stars)",
-    "rule_picked": "🏆 Pick Flag = Top 25% in both aesthetics and sharpness among 3-star photos",
-    "rule_flying": "🟢 Green Label = Flying bird pose (auto-tagged)",
+    "rule_picked": "  └─ 🏆 Pick Flag = Top {percentage}% in both aesthetics and sharpness among 3-star photos",
+    "rule_flying": "🟢 Green Label = Flying pose bird (Sharpness ×1.2 bonus)",
+    "rule_focus": "🔴 Red Label = Precise Focus (focus on head) (Sharpness ×1.1 bonus)",
+    "rule_exposure": "⚠️ Over/Under-exposed = Auto downgrade 1 star",
+    "burst_info": "📸 Burst photos are grouped in burst_xxx/ subdirectories",
     "rule_2_star": "⭐⭐ = Either sharpness or aesthetics meets threshold (2 stars)",
     "rule_1_star": "⭐ = Bird detected but below threshold (1 star)",
     "rule_0_star": "0 star = Poor technical quality (confidence/aesthetics/sharpness below threshold or both eyes hidden)",
