--- a/locales/zh_CN.json
+++ b/locales/zh_CN.json
@@ -2,10 +2,10 @@
   "_meta": {
     "language_name": "简体中文",
     "language_code": "zh_CN",
-    "version": "3.3.0"
+    "version": "3.9.3"
   },
   "app": {
-    "title": "慧眼选鸟 by 詹姆斯于震 v3.9.0",
+    "title": "慧眼选鸟 by 詹姆斯于震 V3.9.3",
     "window_title": "慧眼选鸟 by 詹姆斯于震",
     "brand_name": "慧眼选鸟"
   },
