refactor: Reorganize menu structure
- Move 'Background Mode' from Help to Bird ID menu
- Create new 'Settings' menu with Preferences and Language
- Help menu now only has Check for Updates and About

--- a/locales/en_US.json
+++ b/locales/en_US.json
@@ -10,7 +10,8 @@
     "brand_name": "SuperPicky"
   },
   "menu": {
-    "settings": "Settings",
+    "settings_menu": "Settings",
+    "settings": "Preferences...",
     "advanced_settings": "Advanced Settings...",
     "help": "Help",
     "about": "About SuperPicky...",
