--- a/locales/en_US.json
+++ b/locales/en_US.json
@@ -2,10 +2,10 @@
   "_meta": {
     "language_name": "English",
     "language_code": "en_US",
-    "version": "4.0.1"
+    "version": "4.0.3"
   },
   "app": {
-    "title": "SuperPicky - AI Photo Selector v4.0.2",
+    "title": "SuperPicky - AI Photo Selector v4.0.3 (e6a3d69)",
     "window_title": "SuperPicky - AI Photo Selector",
     "brand_name": "SuperPicky"
   },
