--- a/locales/zh_CN.json
+++ b/locales/zh_CN.json
@@ -2,10 +2,10 @@
   "_meta": {
     "language_name": "简体中文",
     "language_code": "zh_CN",
-    "version": "4.0.1"
+    "version": "4.0.3"
   },
   "app": {
-    "title": "慧眼选鸟 by 詹姆斯于震 V4.0.2",
+    "title": "慧眼选鸟 by 詹姆斯于震 V4.0.3 (e6a3d69)",
     "window_title": "慧眼选鸟 by 詹姆斯于震",
     "brand_name": "慧眼选鸟"
   },
