add sidecar xmp in advanced settings to resolve embeded exif into ARW  will cause Sony Edge Viewer loading error.

--- a/locales/en_US.json
+++ b/locales/en_US.json
@@ -61,6 +61,7 @@
     "subtitle": "AI Bird Photo Culling Tool",
     "photo_directory": "Photo Folder",
     "selection_params": "Culling Parameters",
+    "xmp": "XMP",
     "flight_detection": "BIF Detection",
     "sharpness_short": "Sharpness",
     "aesthetics": "Aesthetics",
@@ -483,6 +484,9 @@
     "birdid_confidence": "ID Confidence",
     "birdid_confidence_hint": "Higher = More accurate, but may miss some species",
     "section_burst": "Burst Detection",
+    "section_xmp": "XMP Write",
+    "xmp_write": "XMP Sidecar Write",
+    "xmp_write_hint": "When checked: write XMP sidecar only, do not modify RAW; when unchecked: write directly to ARW",
     "burst_fps": "Burst Speed",
     "burst_fps_hint": "Continuous shots faster than this will be grouped together",
     "reset_defaults": "Reset Defaults",
@@ -776,6 +780,7 @@
     "sharpness": "⚙️  Sharpness Threshold: {value}",
     "aesthetics": "  🎨 Aesthetic Threshold: {value} (Default: 5.0, TOPIQ)",
     "detect_flight": "⚙️  Detect Flight: {value}",
+    "xmp": "⚙️  XMP Sidecar: {value}",
     "detect_burst": "⚙️  Burst Detection: {value}",
     "organize_files": "⚙️  Organize Files: {value}",
     "sp_description": "SuperPicky CLI - Photo organizer, re-rating and burst detection",
