--- a/locales/zh_CN.json
+++ b/locales/zh_CN.json
@@ -61,6 +61,7 @@
     "subtitle": "AI 选片助手",
     "photo_directory": "照片目录",
     "selection_params": "优选参数",
+    "xmp": "XMP",
     "flight_detection": "飞鸟",
     "sharpness_short": "锐度",
     "aesthetics": "美学",
@@ -483,6 +484,9 @@
     "birdid_confidence": "识别确信度",
     "birdid_confidence_hint": "越高越准确，但可能识别不出一些鸟种",
     "section_burst": "连拍设置",
+    "section_xmp": "XMP 写入",
+    "xmp_write": "XMP 侧车写入",
+    "xmp_write_hint": "勾选时只写 XMP 侧车文件，不修改原 RAW；不勾选时直接写入 ARW",
     "burst_fps": "连拍速度",
     "burst_fps_hint": "快于此速度的连续拍摄将被归为一组",
     "reset_defaults": "恢复默认",
@@ -775,6 +779,7 @@
     "sharpness": "⚙️  锐度阈值: {value}",
     "aesthetics": "  🎨 美学阈值: {value} (默认: 5.0, TOPIQ)",
     "detect_flight": "⚙️  识别飞鸟: {value}",
+    "xmp": "⚙️  XMP侧车: {value}",
     "detect_burst": "⚙️  连拍检测: {value}",
     "organize_files": "⚙️  整理文件: {value}",
     "sp_description": "慧眼选鸟命令行工具 - 支持照片整理、重新评星与连拍检测",
